commit 	modified:   homework.ipynb

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -943,14 +943,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 199,
+      "execution_count": 238,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "x = sp.Symbol('x')\n",
         "expr = (abs(x-2)/(x-2))\n",
-        "p8 = sp.limit(expr, x, 2, dir='-') "
+        "p8 = int(sp.limit(expr, x, 2, dir='-') )"
       ]
     },
     {
@@ -962,19 +962,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 200,
+      "execution_count": 239,
       "metadata": {},
       "outputs": [
         {
           "data": {
-            "text/latex": [
-              "$\\displaystyle -1$"
-            ],
             "text/plain": [
               "-1"
             ]
           },
-          "execution_count": 200,
+          "execution_count": 239,
           "metadata": {},
           "output_type": "execute_result"
         }
